--- a/html_cert/audio_and_video_player.html
+++ b/html_cert/audio_and_video_player.html
@@ -10,10 +10,14 @@
 <h1>HTML Audio and Video Lab</h1>
 <section>
   <h2>Audio Player</h2>
-  <video controls src="https://cdn.freecodecamp.org/curriculum/labs/What is the map method and how does it work.mp4" width="640" type="video/mp4"></video>
+  <video controls width="640" >
+    <source src="https://cdn.freecodecamp.org/curriculum/labs/What is the map method and how does it work.mp4" type="video/mp4">
+  </video>
 </section>
 <section>
-  <audio controls loop src="https://cdn.freecodecamp.org/curriculum/js-music-player/sailing-away.mp3"></audio>
+  <audio controls loop>
+    <source src="https://cdn.freecodecamp.org/curriculum/labs/Audio_Visualize.mp3" type="audio/mpeg">
+  </audio>
 </section>
 </body> 
 </html>
